2nd Year/LFA - Geometrics/src/geometrics/.antlr/geometricsParser.java
// Generated from /home/amaral/geometrics-lfa-11/src/geometrics/geometrics.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class geometricsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, BooleanLiteral=50, ENDLINE=51, 
		REAL=52, COMMENT=53, WS=54, String=55, ID=56, Integer=57;
	public static final int
		RULE_program = 0, RULE_statList = 1, RULE_stat = 2, RULE_drawString = 3, 
		RULE_exit = 4, RULE_input = 5, RULE_importFile = 6, RULE_resetTime = 7, 
		RULE_createColor = 8, RULE_drawFigure = 9, RULE_console = 10, RULE_animation = 11, 
		RULE_rotate = 12, RULE_translate = 13, RULE_random = 14, RULE_screenSize = 15, 
		RULE_declaration = 16, RULE_conditional = 17, RULE_loop = 18, RULE_expr = 19, 
		RULE_getPrimitive = 20, RULE_getAttribute = 21, RULE_createFig = 22, RULE_constructor = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statList", "stat", "drawString", "exit", "input", "importFile", 
			"resetTime", "createColor", "drawFigure", "console", "animation", "rotate", 
			"translate", "random", "screenSize", "declaration", "conditional", "loop", 
			"expr", "getPrimitive", "getAttribute", "createFig", "constructor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'drawString'", "'('", "','", "')'", "':'", "'->'", "'exit'", "'input'", 
			"'<<'", "'>>'", "'importFigures'", "'resetTimer'", "'draw:'", "'console'", 
			"'console('", "'translate'", "'from'", "'second'", "'to'", "'rotate'", 
			"'rand'", "'display('", "'if'", "')<<'", "'else<<'", "'forever'", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'>'", "'<'", "'='", "'/='", "'and'", "'or'", 
			"'>='", "'<='", "'readTimer'", "'collidesEdge'", "'collides'", "'.'", 
			"'figure'", "'circle'", "'line'", "'square'", "'rectangle'", "'triangle'", 
			null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "BooleanLiteral", "ENDLINE", "REAL", "COMMENT", "WS", "String", 
			"ID", "Integer"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "geometrics.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public geometricsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatListContext statList() {
			return getRuleContext(StatListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(geometricsParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			statList();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatListContext extends ParserRuleContext {
		public List<TerminalNode> ENDLINE() { return getTokens(geometricsParser.ENDLINE); }
		public TerminalNode ENDLINE(int i) {
			return getToken(geometricsParser.ENDLINE, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public StatListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statList; }
	}

	public final StatListContext statList() throws RecognitionException {
		StatListContext _localctx = new StatListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__7) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << T__43) | (1L << ENDLINE) | (1L << ID))) != 0)) {
				{
				{
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__7) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << T__43) | (1L << ID))) != 0)) {
					{
					setState(51);
					stat();
					}
				}

				setState(54);
				match(ENDLINE);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatDeclContext extends StatContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public StatDeclContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatColorContext extends StatContext {
		public CreateColorContext createColor() {
			return getRuleContext(CreateColorContext.class,0);
		}
		public StatColorContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatImportFileContext extends StatContext {
		public ImportFileContext importFile() {
			return getRuleContext(ImportFileContext.class,0);
		}
		public StatImportFileContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatAnimateContext extends StatContext {
		public AnimationContext animation() {
			return getRuleContext(AnimationContext.class,0);
		}
		public StatAnimateContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatTranslateContext extends StatContext {
		public TranslateContext translate() {
			return getRuleContext(TranslateContext.class,0);
		}
		public StatTranslateContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatInputContext extends StatContext {
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public StatInputContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatScreenSizeContext extends StatContext {
		public ScreenSizeContext screenSize() {
			return getRuleContext(ScreenSizeContext.class,0);
		}
		public StatScreenSizeContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatDrawFigureContext extends StatContext {
		public DrawFigureContext drawFigure() {
			return getRuleContext(DrawFigureContext.class,0);
		}
		public StatDrawFigureContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatCondContext extends StatContext {
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public StatCondContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatExitContext extends StatContext {
		public ExitContext exit() {
			return getRuleContext(ExitContext.class,0);
		}
		public StatExitContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatConsoleContext extends StatContext {
		public ConsoleContext console() {
			return getRuleContext(ConsoleContext.class,0);
		}
		public StatConsoleContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatCreateFigContext extends StatContext {
		public CreateFigContext createFig() {
			return getRuleContext(CreateFigContext.class,0);
		}
		public StatCreateFigContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatResetTimeContext extends StatContext {
		public ResetTimeContext resetTime() {
			return getRuleContext(ResetTimeContext.class,0);
		}
		public StatResetTimeContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatStringContext extends StatContext {
		public DrawStringContext drawString() {
			return getRuleContext(DrawStringContext.class,0);
		}
		public StatStringContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatLoopContext extends StatContext {
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public StatLoopContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatRotateContext extends StatContext {
		public RotateContext rotate() {
			return getRuleContext(RotateContext.class,0);
		}
		public StatRotateContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class StatRandomContext extends StatContext {
		public RandomContext random() {
			return getRuleContext(RandomContext.class,0);
		}
		public StatRandomContext(StatContext ctx) { copyFrom(ctx); }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new StatCreateFigContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				createFig();
				}
				break;
			case 2:
				_localctx = new StatInputContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				input();
				}
				break;
			case 3:
				_localctx = new StatImportFileContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				importFile();
				}
				break;
			case 4:
				_localctx = new StatResetTimeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				resetTime();
				}
				break;
			case 5:
				_localctx = new StatColorContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				createColor();
				}
				break;
			case 6:
				_localctx = new StatDrawFigureContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(65);
				drawFigure();
				}
				break;
			case 7:
				_localctx = new StatCondContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(66);
				conditional();
				}
				break;
			case 8:
				_localctx = new StatLoopContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(67);
				loop();
				}
				break;
			case 9:
				_localctx = new StatDeclContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(68);
				declaration();
				}
				break;
			case 10:
				_localctx = new StatScreenSizeContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(69);
				screenSize();
				}
				break;
			case 11:
				_localctx = new StatTranslateContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(70);
				translate();
				}
				break;
			case 12:
				_localctx = new StatRotateContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(71);
				rotate();
				}
				break;
			case 13:
				_localctx = new StatAnimateContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(72);
				animation();
				}
				break;
			case 14:
				_localctx = new StatConsoleContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(73);
				console();
				}
				break;
			case 15:
				_localctx = new StatExitContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(74);
				exit();
				}
				break;
			case 16:
				_localctx = new StatRandomContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(75);
				random();
				}
				break;
			case 17:
				_localctx = new StatStringContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(76);
				drawString();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrawStringContext extends ParserRuleContext {
		public DrawStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drawString; }
	 
		public DrawStringContext() { }
		public void copyFrom(DrawStringContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DrawStringPYContext extends DrawStringContext {
		public Token x;
		public Token y;
		public Token size;
		public Token text;
		public Token color;
		public List<TerminalNode> Integer() { return getTokens(geometricsParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(geometricsParser.Integer, i);
		}
		public List<TerminalNode> ID() { return getTokens(geometricsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(geometricsParser.ID, i);
		}
		public DrawStringPYContext(DrawStringContext ctx) { copyFrom(ctx); }
	}

	public final DrawStringContext drawString() throws RecognitionException {
		DrawStringContext _localctx = new DrawStringContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_drawString);
		try {
			_localctx = new DrawStringPYContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__0);
			setState(80);
			match(T__1);
			setState(81);
			((DrawStringPYContext)_localctx).x = match(Integer);
			setState(82);
			match(T__2);
			setState(83);
			((DrawStringPYContext)_localctx).y = match(Integer);
			setState(84);
			match(T__2);
			setState(85);
			((DrawStringPYContext)_localctx).size = match(Integer);
			setState(86);
			match(T__3);
			setState(87);
			match(T__4);
			setState(88);
			((DrawStringPYContext)_localctx).text = match(ID);
			setState(89);
			match(T__5);
			setState(90);
			((DrawStringPYContext)_localctx).color = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExitContext extends ParserRuleContext {
		public ExitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exit; }
	 
		public ExitContext() { }
		public void copyFrom(ExitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExitProgramContext extends ExitContext {
		public ExitProgramContext(ExitContext ctx) { copyFrom(ctx); }
	}

	public final ExitContext exit() throws RecognitionException {
		ExitContext _localctx = new ExitContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exit);
		try {
			_localctx = new ExitProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
	 
		public InputContext() { }
		public void copyFrom(InputContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UserInputContext extends InputContext {
		public TerminalNode ID() { return getToken(geometricsParser.ID, 0); }
		public StatListContext statList() {
			return getRuleContext(StatListContext.class,0);
		}
		public UserInputContext(InputContext ctx) { copyFrom(ctx); }
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_input);
		try {
			_localctx = new UserInputContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__7);
			setState(95);
			match(T__4);
			setState(96);
			match(ID);
			setState(97);
			match(T__8);
			setState(98);
			statList();
			setState(99);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportFileContext extends ParserRuleContext {
		public ImportFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importFile; }
	 
		public ImportFileContext() { }
		public void copyFrom(ImportFileContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImportFiguresContext extends ImportFileContext {
		public ImportFiguresContext(ImportFileContext ctx) { copyFrom(ctx); }
	}

	public final ImportFileContext importFile() throws RecognitionException {
		ImportFileContext _localctx = new ImportFileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importFile);
		try {
			_localctx = new ImportFiguresContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResetTimeContext extends ParserRuleContext {
		public ResetTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resetTime; }
	 
		public ResetTimeContext() { }
		public void copyFrom(ResetTimeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ResetTimerContext extends ResetTimeContext {
		public ResetTimerContext(ResetTimeContext ctx) { copyFrom(ctx); }
	}

	public final ResetTimeContext resetTime() throws RecognitionException {
		ResetTimeContext _localctx = new ResetTimeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_resetTime);
		try {
			_localctx = new ResetTimerContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateColorContext extends ParserRuleContext {
		public CreateColorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createColor; }
	 
		public CreateColorContext() { }
		public void copyFrom(CreateColorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ColorContext extends CreateColorContext {
		public TerminalNode ID() { return getToken(geometricsParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ColorContext(CreateColorContext ctx) { copyFrom(ctx); }
	}

	public final CreateColorContext createColor() throws RecognitionException {
		CreateColorContext _localctx = new CreateColorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_createColor);
		try {
			_localctx = new ColorContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(ID);
			setState(106);
			match(T__5);
			setState(107);
			match(T__1);
			setState(108);
			expr(0);
			setState(109);
			match(T__2);
			setState(110);
			expr(0);
			setState(111);
			match(T__2);
			setState(112);
			expr(0);
			setState(113);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrawFigureContext extends ParserRuleContext {
		public DrawFigureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drawFigure; }
	 
		public DrawFigureContext() { }
		public void copyFrom(DrawFigureContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DrawFigContext extends DrawFigureContext {
		public TerminalNode ID() { return getToken(geometricsParser.ID, 0); }
		public DrawFigContext(DrawFigureContext ctx) { copyFrom(ctx); }
	}

	public final DrawFigureContext drawFigure() throws RecognitionException {
		DrawFigureContext _localctx = new DrawFigureContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_drawFigure);
		try {
			_localctx = new DrawFigContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__12);
			setState(116);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConsoleContext extends ParserRuleContext {
		public ConsoleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_console; }
	 
		public ConsoleContext() { }
		public void copyFrom(ConsoleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrintConsoleContext extends ConsoleContext {
		public Token p;
		public TerminalNode String() { return getToken(geometricsParser.String, 0); }
		public PrintConsoleContext(ConsoleContext ctx) { copyFrom(ctx); }
	}
	public static class PrintConsoleIDContext extends ConsoleContext {
		public TerminalNode ID() { return getToken(geometricsParser.ID, 0); }
		public PrintConsoleIDContext(ConsoleContext ctx) { copyFrom(ctx); }
	}

	public final ConsoleContext console() throws RecognitionException {
		ConsoleContext _localctx = new ConsoleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_console);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				_localctx = new PrintConsoleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(T__13);
				setState(119);
				match(T__1);
				setState(120);
				((PrintConsoleContext)_localctx).p = match(String);
				setState(121);
				match(T__3);
				}
				break;
			case T__14:
				_localctx = new PrintConsoleIDContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(T__14);
				setState(123);
				match(ID);
				setState(124);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnimationContext extends ParserRuleContext {
		public AnimationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_animation; }
	 
		public AnimationContext() { }
		public void copyFrom(AnimationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AnimationTranslateContext extends AnimationContext {
		public Token start;
		public Token end;
		public TerminalNode ID() { return getToken(geometricsParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Integer() { return getTokens(geometricsParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(geometricsParser.Integer, i);
		}
		public AnimationTranslateContext(AnimationContext ctx) { copyFrom(ctx); }
	}
	public static class AnimationRotateContext extends AnimationContext {
		public Token start;
		public Token end;
		public TerminalNode ID() { return getToken(geometricsParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Integer() { return getTokens(geometricsParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(geometricsParser.Integer, i);
		}
		public AnimationRotateContext(AnimationContext ctx) { copyFrom(ctx); }
	}
